--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -1,7 +1,10 @@
+* {
+  font-family: Roboto, sans-serif;
+}
+
 body {
   color: $body-color;
   font-size: 18px;
-  font-family: Roboto, sans-serif;
   line-height: 1.5;
 
   background-color: $body-bg;
