--- a/src/scss/modules/_navigation.scss
+++ b/src/scss/modules/_navigation.scss
@@ -3,7 +3,7 @@
   font-size: 11px;
   line-height: $line-height;
 
-  @include flex(90px, row, center);
+  @include flex(null, row, center);
 
   @include media(custom, 840px) {
     flex-direction: column;
@@ -11,27 +11,45 @@
   }
 
   &-logo {
-    font-weight: 400;
+    margin-right: 90px;
 
-    @include flex(map-get($spacers, 1), row, center);
+    @include flex(null, row, center);
 
-    @include media(custom, 840px) {
-      margin-bottom: map-get($spacers, 1);
+    &-title {
+      color: $main-text-color;
+      font-weight: 400;
+
+      @include media(mobile) {
+        font-size: 11px;
+        font-weight: 700;
+      }
     }
 
     &-icon {
       width: map-get($spacers, 2);
       height: map-get($spacers, 2);
+      margin-right: map-get($spacers, 1);
+    }
+
+    @include media(mobile) {
+      margin-right: 0;
+    }
+
+    @include media(custom, 840px) {
+      margin-bottom: map-get($spacers, 1);
     }
   }
 
   &-menu {
-    @include flex(map-get($spacers, 2), null, center);
+    @include flex(map-get($spacers, 2), row);
 
     @include media(custom, 840px) {
       flex-direction: column;
-      align-items: flex-start;
       margin-bottom: map-get($spacers, 1);
+    }
+
+    &-item {
+      line-height: 16px;
     }
 
     &-link {
@@ -47,14 +65,19 @@
       &--active {
         color: $link-active-color;
       }
+
+      @include media(mobile) {
+        font-weight: bold;
+      }
     }
   }
 
   &-search {
     margin-left: auto;
-    padding: 3px 8px;
-    border: 2px solid transparent;
+    padding: 5px 10px;
     border-radius: 50px;
+    min-width: 248px;
+    height: 25px;
 
     color: $search-placeholder-color;
     font-size: 13.3px;
@@ -71,11 +94,11 @@
     }
 
     &:hover {
-      border-color: $search-border-hover-color;
+      box-shadow: 0 0 0 2px $search-border-hover-color;
     }
 
     &:focus {
-      border-color: $search-border-focus-color;
+      box-shadow: 0 0 0 2px $search-border-focus-color;
 
       color: $secondary-text-color;
     }
