--- a/src/scss/layouts/_section.scss
+++ b/src/scss/layouts/_section.scss
@@ -1,12 +1,14 @@
 .section{
-  padding: 100px 0 0;
+  padding: 100px 20px 0;
+  max-width: $container-width + 40px;
+  margin: 0 auto;
 
   &--same-vertical {
-    padding: 100px 0;
+    padding: 100px 20px;
   }
 
   &-title {
-    margin-bottom: 45px;
+    margin-bottom: 48px;
 
     text-align: center;
   }
