--- a/src/scss/modules/_pricing-item.scss
+++ b/src/scss/modules/_pricing-item.scss
@@ -1,31 +1,38 @@
 .pricing-item {
-  padding: 0 1.5rem;
+  padding: 1.5rem;
   border-radius: 1rem;
+  box-sizing: border-box;
+  max-width: 366px;
 
   color: $main-text-color;
   text-align: center;
 
   &-title {
     margin-bottom: 200px;
-    margin-top: map-get($spacers, 2);
 
-    font-weight: 700;
+    font-size: 24px;
+    line-height: 36px;
+    font-weight: 400;
   }
 
   &-value {
+    @include flex(map-get($spacers, 1), row, flex-start, center);
+    margin-bottom: map-get($spacers, 4);
+
     font-size: map-get($font-sizes, 7);
+    line-height: map-get($font-sizes, 7);
   }
 
   &-currency {
     font-size: map-get($font-sizes, 3);
+    line-height: 1.5;
     text-transform: uppercase;
-    vertical-align: text-top;
   }
 
   &-footer {
-    margin-bottom: map-get($spacers, 7);
+    margin-bottom: map-get($spacers, 4);
 
-    font-size: 13px;
+    font-size: 12.8px;
   }
 
   &--free {
