--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,7 +4,16 @@
   font-style: normal;
   font-variant: normal;
   font-stretch: normal;
-  src: url("../fonts/Roboto-Regular.ttf") format("ttf");
+  src: url("../fonts/Roboto-Regular.ttf");
+}
+
+@font-face {
+  font-weight: 700;
+  font-family: Roboto;
+  font-style: normal;
+  font-variant: normal;
+  font-stretch: normal;
+  src: url("../fonts/Roboto-Bold.ttf");
 }
 
 $black: #08020d;
