--- a/src/scss/modules/_navigation.scss
+++ b/src/scss/modules/_navigation.scss
@@ -10,16 +10,26 @@
     align-items: flex-start;
   }
 
-  &-logo-icon {
-    width: map-get($spacers, 2);
-    height: map-get($spacers, 2);
-    margin-right: map-get($spacers, 1);
-  }
-
   &-logo {
     margin-right: 90px;
 
     @include flex(null, row, center);
+
+    &-title {
+      color: $main-text-color;
+      font-weight: 400;
+
+      @include media(mobile) {
+        font-size: 11px;
+        font-weight: 700;
+      }
+    }
+
+    &-icon {
+      width: map-get($spacers, 2);
+      height: map-get($spacers, 2);
+      margin-right: map-get($spacers, 1);
+    }
 
     @include media(mobile) {
       margin-right: 0;
@@ -31,12 +41,16 @@
   }
 
   &-menu {
-    @include flex(map-get($spacers, 2), null, center);
+    @include flex(map-get($spacers, 2), row);
 
     @include media(custom, 840px) {
       flex-direction: column;
       align-items: flex-start;
       margin-bottom: map-get($spacers, 1);
+    }
+
+    &-item {
+      line-height: 16px;
     }
 
     &-link {
@@ -52,6 +66,10 @@
       &--active {
         color: $link-active-color;
       }
+
+      @include media(mobile) {
+        font-weight: bold;
+      }
     }
   }
 
@@ -60,6 +78,7 @@
     padding: 5px 10px;
     border-radius: 50px;
     min-width: 248px;
+    height: 25px;
 
     color: $search-placeholder-color;
     font-size: 13.3px;
