--- a/src/css/app.css
+++ b/src/css/app.css
@@ -386,10 +386,12 @@ a {
 }
 
 .section {
-  padding: 100px 0 0;
+  padding: 100px 20px 0;
+  max-width: 1240px;
+  margin: 0 auto;
 }
 .section--same-vertical {
-  padding: 100px 0;
+  padding: 100px 20px;
 }
 .section-title {
   margin-bottom: 48px;
