--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,12 +1,10 @@
+@import "fonts";
 @import "variables";
 @import "mixins";
 
-@import "utilities/index";
 @import "reset";
 @import "general";
-@import "grid";
+@import "utilities/index";
 @import "helpers";
-
-@import "layouts/all";
 
 @import "modules/all";
