--- a/src/scss/modules/all.scss
+++ b/src/scss/modules/all.scss
@@ -1,4 +1,6 @@
+@import "header";
 @import "navigation";
+@import "search";
 @import "subscribe-form";
 @import "buttons";
 @import "page-description";
@@ -6,6 +8,7 @@
 @import "pricing-item";
 @import "news-item";
 @import "app-image";
+@import "footer";
 @import "footer-col";
 @import "footer-link";
 @import "divider";
