--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,21 +1,3 @@
-@font-face {
-  font-weight: 400;
-  font-family: Roboto;
-  font-style: normal;
-  font-variant: normal;
-  font-stretch: normal;
-  src: url("../fonts/Roboto-Regular.ttf");
-}
-
-@font-face {
-  font-weight: 700;
-  font-family: Roboto;
-  font-style: normal;
-  font-variant: normal;
-  font-stretch: normal;
-  src: url("../fonts/Roboto-Bold.ttf");
-}
-
 $black: #08020d;
 $white: #ffffff;
 $gray: #e0e0e0;
@@ -27,6 +9,8 @@ $purple: #5328a1;
 $red: #95390c;
 
 /** THEME VARS **/
+
+$font-family-base: Roboto, sans-serif;
 
 $primary: $green;
 
@@ -44,7 +28,8 @@ $bg-opacity-focus: 15%;
 $breakpoints: (
   mobile: 1239.97px
 );
-$container-width: 1200px;
+$content-max-width: 1200px;
+$content-padding: 20px;
 
 /** COMPONENTS **/
 
@@ -101,10 +86,14 @@ $spacers: (
   5: 48px,
   6: 56px,
   7: 64px,
-  8: 78px
+  8: 78px,
+  9: 90px
 );
 
 $font-sizes: map-merge(
-  (small: 13px),
+  (
+    ultra-small: 11px,
+    small: 13px
+  ),
   $spacers
 );
