--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -11,11 +11,12 @@
 }
 
 .section {
-  padding: 100px 20px 0;
+  padding-top: 100px;
 }
 
 .section-same-paddings {
-  padding: 100px 20px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .limit-content {
