--- a/src/scss/modules/_page-description.scss
+++ b/src/scss/modules/_page-description.scss
@@ -1,7 +1,6 @@
 .page-description {
-  padding: 200px 0;
-
-  text-align: center;
+  padding-top: 200px;
+  padding-bottom: 200px;
 
   &--main {
     @include bg-image("../images/banner.png");
@@ -12,6 +11,7 @@
   }
 
   @include media(mobile) {
-    padding: 250px 0 200px;
+    padding-top: 250px;
+    padding-bottom: 200px;
   }
 }
