--- a/src/scss/modules/all.scss
+++ b/src/scss/modules/all.scss
@@ -5,7 +5,7 @@
 @import "buttons";
 @import "page-description";
 @import "pricing-list";
-@import "pricing-item";
+@import "pricing-card";
 @import "news-item";
 @import "app-image";
 @import "footer";
